# pyros-msgs

./: .pyup.yml  CHANGELOG.rst  CMakeLists.txt  README.rst  tox.ini
requirements/: tools.txt
requirements/indigo/: debs_in_venv.txt
requirements/kinetic/: debs_in_venv.txt
requirements/lunar/: debs_in_venv.txt
requirements/python/: tests.txt
